--- a/app/src/main/res/layout/activity_opmodehelp.xml
+++ b/app/src/main/res/layout/activity_opmodehelp.xml
@@ -148,11 +148,26 @@
 
     <ImageButton
         android:id="@+id/view"
-        android:layout_width="59dp"
-        android:layout_height="48dp"
+        android:layout_width="52dp"
+        android:layout_height="44dp"
         android:background="@android:color/transparent"
         app:srcCompat="@drawable/ic_third_party_more"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="16dp" />
+        tools:layout_editor_absoluteX="5dp"
+        tools:layout_editor_absoluteY="1dp" />
+
+    <ImageButton
+        android:id="@+id/setting"
+        android:layout_width="50dp"
+        android:layout_height="52dp"
+        android:background="@android:color/transparent"
+        app:srcCompat="@drawable/notice"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="245dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintVertical_bias="0.0"
+        android:layout_marginRight="0dp"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_editor_absoluteX="393dp" />
 
 </android.support.constraint.ConstraintLayout>
