--- a/app/src/main/res/layout/frament_7.xml
+++ b/app/src/main/res/layout/frament_7.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/bg_fragment_4">
+    android:background="@drawable/cat_1">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -95,6 +95,18 @@
                     android:textSize="24sp"
                     android:textStyle="bold" />
             </RelativeLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="自动编程辅助" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginLeft="10dp"
+                android:background="@color/colorPrimaryDark" />
+
         </LinearLayout>
     </ScrollView>
 
