--- a/app/src/main/res/layout/activity_writecode.xml
+++ b/app/src/main/res/layout/activity_writecode.xml
@@ -49,6 +49,7 @@
 
         <EditText
             android:id="@+id/code"
+            android:hint="在这写下你将要提交的代码"
             android:background="@null"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
