--- a/app/src/main/res/layout/activity_writecode.xml
+++ b/app/src/main/res/layout/activity_writecode.xml
@@ -44,31 +44,53 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="397dp"
+        android:layout_height="255dp"
+        android:orientation="vertical">
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <EditText
+                    android:id="@+id/code"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@null"
+                    android:hint="在这写下你将要提交的代码" />
+            </LinearLayout>
+        </ScrollView>
+
+    </LinearLayout>
+
+    <EditText
+        android:id="@+id/getwritter"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="请写下你的名字"
+        android:maxLines="2" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.89"
         android:orientation="vertical">
 
         <EditText
-            android:id="@+id/code"
-            android:hint="在这写下你将要提交的代码"
-            android:background="@null"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-        <EditText
-            android:id="@+id/getwritter"
-            android:hint="请写下你的名字"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-        <EditText
             android:id="@+id/writtermassage"
-            android:hint="你想说点什么"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent"
+            android:hint="你想说点什么" />
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <Button
