--- a/app/src/main/res/layout/activity_writecode.xml
+++ b/app/src/main/res/layout/activity_writecode.xml
@@ -13,12 +13,18 @@
         android:layout_height="116dp"
         android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/picture"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="164dp"
             android:layout_height="match_parent"
-            android:layout_weight="0.03"
-            app:srcCompat="@drawable/add" />
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/picture"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                app:srcCompat="@drawable/add" />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
