--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -124,7 +124,7 @@
                 android:layout_alignBaseline="@+id/rarcherstart"
                 android:layout_alignBottom="@+id/rarcherstart"
                 android:layout_toEndOf="@+id/imageView19"
-                android:text="Rarcehr"
+                android:text="控制台"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
@@ -142,7 +142,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/imageView18"
                 android:layout_toEndOf="@+id/imageView19"
-                android:text="进入Rarcher人格激活程序" />
+                android:text="进入梨园控制台" />
         </RelativeLayout>
     </LinearLayout>
 
