--- a/app/src/main/res/layout/activity_developer_application.xml
+++ b/app/src/main/res/layout/activity_developer_application.xml
@@ -465,7 +465,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="版本号：内测beta1.0" />
+                android:text="版本号：内测 3" />
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
