--- a/app/src/main/res/layout/hgz_set_page_layout.xml
+++ b/app/src/main/res/layout/hgz_set_page_layout.xml
@@ -300,9 +300,9 @@
                     android:id="@+id/textView16"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Beta 1.0"
                     android:layout_alignParentBottom="true"
-                    android:layout_alignStart="@+id/textView26" />
+                    android:layout_alignStart="@+id/textView26"
+                    android:text="Version 3" />
             </RelativeLayout>
             <RelativeLayout
                 android:layout_width="match_parent"
