--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -8,25 +8,49 @@
     android:layout_height="match_parent">
 
 
+
+
         <EditText
             android:id="@+id/register_name"
-            android:layout_width="199dp"
-            android:layout_height="41dp"
-            android:hint="@string/register_name_hint"
-            android:layout_marginLeft="50dp"
+            android:layout_width="192dp"
+            android:layout_height="42dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:ems="10"
+            android:hint="用户名"
+            android:inputType="textEmailAddress"
+            android:textColor="@android:color/black"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.24"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintBottom_toBottomOf="@+id/register_password"
-            android:layout_marginBottom="95dp" />
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.54"/>
 
         <EditText
             android:id="@+id/register_email"
-            android:layout_width="199dp"
-            android:layout_height="45dp"
-            android:hint="@string/register_email_hint"
-            android:layout_marginLeft="50dp"
+            android:layout_width="192dp"
+            android:layout_height="42dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:ems="10"
+            android:hint="邮箱地址"
+            android:inputType="textEmailAddress"
+            android:textColor="@android:color/black"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.238"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintBottom_toBottomOf="@+id/register_password"
-            android:layout_marginBottom="50dp" />
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.616"/>
 
         <EditText
             android:id="@+id/register_password"
