--- a/app/src/main/res/layout/activitymain.xml
+++ b/app/src/main/res/layout/activitymain.xml
@@ -9,10 +9,10 @@
         android:id="@+id/scroll"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/linearLayout"
         android:layout_alignParentTop="true"
         android:scrollbars="vertical"
-        android:fadeScrollbars="false"
-        android:layout_above="@+id/linearLayout">
+        android:fadeScrollbars="false">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -36,10 +36,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:id="@+id/linearLayout"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="14dp">
+        android:id="@+id/linearLayout">
 
         <EditText
             android:id="@+id/mingling"
@@ -57,6 +56,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="发送" />
+
     </LinearLayout>
 
 </RelativeLayout>
