--- a/app/src/main/res/layout/frament_6.xml
+++ b/app/src/main/res/layout/frament_6.xml
@@ -4,35 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/settingbg"
+    android:id="@+id/f6"
     android:orientation="vertical">
 
 
-    <ListView
-        android:id="@+id/listview"
-        android:layout_width="match_parent"
-        android:layout_height="515dp"
-        android:layout_alignParentStart="true" />
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <ImageView
-            android:id="@+id/imageView7"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            app:srcCompat="@drawable/diy_share" />
-
-        <Button
-            android:id="@+id/writecode"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentEnd="true"
-            android:background="@android:color/transparent"
-            android:text="上传代码"
-            android:textColor="@color/colorAccent"
-            android:layout_alignTop="@+id/imageView7" />
-    </RelativeLayout>
 </LinearLayout>
