--- a/app/src/main/res/layout/frament_7.xml
+++ b/app/src/main/res/layout/frament_7.xml
@@ -1,113 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/f7"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/cat_1">
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" >
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="手动编程辅助" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginLeft="10dp"
-                android:background="@color/colorPrimaryDark" />
-
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <Button
-                    android:id="@+id/opmodehelp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignBottom="@+id/imageView3"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentTop="true"
-                    android:layout_toStartOf="@+id/textView2"
-                    android:background="@android:color/transparent" />
-
-                <ImageView
-                    android:id="@+id/imageView3"
-                    android:layout_width="80sp"
-                    android:layout_height="60sp"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentTop="true"
-                    app:srcCompat="@drawable/version_info" />
-
-                <TextView
-                    android:id="@+id/textView2"
-                    android:layout_width="2000sp"
-                    android:layout_height="60sp"
-                    android:layout_alignParentTop="true"
-                    android:layout_toEndOf="@+id/imageView3"
-                    android:text="进入模拟手动编程1.0版本"
-                    android:textSize="24sp"
-                    android:textStyle="bold" />
-            </RelativeLayout>
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <Button
-                    android:id="@+id/opmodehel2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignBottom="@+id/imageView6"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentTop="true"
-                    android:layout_toStartOf="@+id/textView1"
-                    android:background="@android:color/transparent" />
-
-                <ImageView
-                    android:id="@+id/imageView6"
-                    android:layout_width="80sp"
-                    android:layout_height="60sp"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentTop="true"
-                    app:srcCompat="@drawable/ic_manage_enter_fast_pass" />
-
-                <TextView
-                    android:id="@+id/textView1"
-                    android:layout_width="2000sp"
-                    android:layout_height="60sp"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentTop="true"
-                    android:layout_toEndOf="@+id/imageView6"
-                    android:text="进入编辑代码版手动编程1.0版本[OpMode版]"
-                    android:textSize="24sp"
-                    android:textStyle="bold" />
-            </RelativeLayout>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="自动编程辅助" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginLeft="10dp"
-                android:background="@color/colorPrimaryDark" />
-
-        </LinearLayout>
-    </ScrollView>
+    android:background="@drawable/setbg">
 
 </RelativeLayout>
