--- a/app/src/main/res/layout/frament_6.xml
+++ b/app/src/main/res/layout/frament_6.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/f6"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/settingbg"
-    android:id="@+id/f6"
+    android:background="@drawable/set4"
     android:orientation="vertical">
-
 
 
 </LinearLayout>
