--- a/app/src/main/res/layout/hgz_set_page_layout.xml
+++ b/app/src/main/res/layout/hgz_set_page_layout.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/f5"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/settingbg2"
-    android:id="@+id/f5"
+    android:background="@drawable/set3"
     android:orientation="vertical">
 
 
