--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -1,13 +1,97 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.liyuaninc.liyuantcapp.Main.Fragments.setting">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="setting" />
 
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="match_parent"
+                android:layout_height="234dp"
+                app:srcCompat="@drawable/dialog" />
+
+            <LinearLayout
+
+                android:layout_width="match_parent"
+                android:layout_height="62dp"
+                android:orientation="horizontal"
+                android:weightSum="1">
+
+                <ImageView
+                    android:id="@+id/imageView2"
+                    android:layout_width="58dp"
+                    android:layout_height="match_parent"
+                    app:srcCompat="@drawable/download" />
+
+                <TextView
+                    android:id="@+id/downland"
+                    android:layout_width="242dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1.01"
+                    android:gravity="fill_vertical"
+                    android:text="我的下载"
+
+                    android:textAllCaps="true"
+                    android:textSize="18sp" />
+
+                <ImageView
+                    android:id="@+id/imageView3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="fill_vertical"
+                    android:gravity="fill_vertical"
+                    app:srcCompat="@drawable/black_back" />
+
+            </LinearLayout>
+
+            <LinearLayout
+
+                android:layout_width="match_parent"
+                android:layout_height="62dp"
+                android:orientation="horizontal"
+                android:weightSum="1">
+
+                <ImageView
+
+                    android:layout_width="58dp"
+                    android:layout_height="match_parent"
+                    app:srcCompat="@drawable/aboutus" />
+
+                <TextView
+                    android:id="@+id/aboutus"
+                    android:layout_width="242dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1.01"
+                    android:gravity="fill_vertical"
+                    android:text="关于我们"
+
+                    android:textAllCaps="true"
+                    android:textSize="18sp" />
+
+                <ImageView
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="fill_vertical"
+                    android:gravity="fill_vertical"
+                    app:srcCompat="@drawable/black_back" />
+
+            </LinearLayout>
+
+
+        </LinearLayout>
+    </ScrollView>
 </FrameLayout>
