--- a/app/src/main/res/layout/activity_aboutus.xml
+++ b/app/src/main/res/layout/activity_aboutus.xml
@@ -4,54 +4,73 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
     android:orientation="vertical"
-    tools:context="com.liyuaninc.liyuantcapp.aboutus.aboutus"
-    android:weightSum="1">
+    android:weightSum="1"
+    tools:context="com.liyuaninc.liyuantcapp.aboutus.aboutus">
 
-    <LinearLayout
-        android:layout_width="383dp"
-        android:layout_height="43dp"
-        android:orientation="horizontal"
-        android:weightSum="1"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp">
-
-        <ImageView
-            android:id="@+id/backtosetting"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="0.03"
-            app:srcCompat="@drawable/back_icon" />
-
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="328dp"
-            android:layout_height="match_parent"
-            android:layout_weight="0.24"
-            android:gravity="center_horizontal|center"
-            android:text="关于我们"
-            android:textAlignment="center"
-            android:textSize="18sp" />
-    </LinearLayout>
-
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp">
+        android:layout_height="match_parent"
+        android:background="@color/colorInactive">
 
-        <ImageView
-            android:id="@+id/imageView5"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="124dp"
-            app:srcCompat="@mipmap/ic_launcher" />
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center_horizontal"
-            android:text="v 2.0.0 alpha" />
-    </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:weightSum="1"
+                tools:layout_editor_absoluteX="8dp"
+                tools:layout_editor_absoluteY="8dp">
+
+                <ImageView
+                    android:id="@+id/backtosetting"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.03"
+                    app:srcCompat="@drawable/back_icon" />
+
+                <TextView
+                    android:id="@+id/textView"
+                    android:layout_width="328dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.24"
+                    android:gravity="center_horizontal|center"
+                    android:text="关于我们"
+                    android:textAlignment="center"
+                    android:textSize="18sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="0.03"
+                android:orientation="vertical"
+                tools:layout_editor_absoluteX="8dp"
+                tools:layout_editor_absoluteY="8dp">
+
+                <ImageView
+                    android:id="@+id/imageView5"
+                    android:layout_width="match_parent"
+                    android:layout_height="124dp"
+                    app:srcCompat="@mipmap/ic_launcher" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center_horizontal"
+                    android:text="v 2.0.0 alpha" />
+            </LinearLayout>
+
+            <include layout="@layout/developers"></include>
+
+            <include layout="@layout/define"></include>
+
+        </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
