--- a/app/src/main/res/layout/fragment_competition.xml
+++ b/app/src/main/res/layout/fragment_competition.xml
@@ -1,13 +1,32 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
+    android:orientation="vertical"
     tools:context="com.liyuaninc.liyuantcapp.Main.Fragments.competition">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="competition" />
 
-</FrameLayout>
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="10.09"
+        android:gravity="center_horizontal"
+        android:text="赛季资料"
+        android:textAlignment="center"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="18sp"
+        android:textStyle="bold" />
+
+    <ExpandableListView
+        android:id="@+id/view_exlist"
+        android:layout_width="match_parent"
+        android:layout_height="542dp">
+
+    </ExpandableListView>
+
+
+</LinearLayout>
