--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimaryDark">#416ac1</color>
     <color name="colorAccent">#FF4081</color>
 
 
     <color name="colorActive">#00BCD4</color>
-    <color name="colorInactive">#d2d0d1</color>
+    <color name="colorInactive">#696969</color>
     <color name="colorFront">#4db6ac</color>
     <color name="colorBehind">#84ffff</color>
 
