--- a/app/src/main/res/layout/season_group.xml
+++ b/app/src/main/res/layout/season_group.xml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="horizontal">
+
     <TextView
-        android:paddingTop="8dp"
-        android:paddingBottom="8dp"
-        android:paddingLeft="36dp"
-        android:textSize="20sp"
-        android:textColor="#000000"
         android:id="@+id/view_title"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:paddingBottom="8dp"
+        android:paddingLeft="36dp"
+        android:paddingTop="8dp"
+        android:textColor="#000000"
+        android:textSize="20sp" />
 
 
 </LinearLayout>
