--- a/app/src/main/res/layout/season_group.xml
+++ b/app/src/main/res/layout/season_group.xml
@@ -5,10 +5,19 @@
     android:layout_height="match_parent"
     android:orientation="horizontal">
 
+    <ImageView
+        android:id="@+id/touxiang"
+        android:layout_width="86dp"
+        android:layout_height="75dp"
+        app:srcCompat="@drawable/ftc" />
+
     <TextView
         android:id="@+id/view_title"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:textAllCaps="false"
+        android:gravity="top|bottom"
+        android:layout_height="75dp"
         android:paddingBottom="8dp"
         android:paddingLeft="36dp"
         android:paddingTop="8dp"
