--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -65,14 +65,20 @@
 
     <Button
         android:id="@+id/button_submit"
-        android:layout_width="39dp"
-        android:layout_height="41dp"
-        android:background="@android:color/transparent"
-        android:text="@string/register_button"
-        android:layout_marginRight="54dp"
+        android:layout_width="36dp"
+        android:layout_height="35dp"
+        android:background="@android:color/holo_red_dark"
+        android:text="注册"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="131dp" />
+        android:layout_marginBottom="8dp"
+        app:layout_constraintHorizontal_bias="0.852"
+        app:layout_constraintVertical_bias="0.777" />
 
     <Button
         android:id="@+id/goLogin"
