--- a/app/src/main/res/layout/activity_aboutus.xml
+++ b/app/src/main/res/layout/activity_aboutus.xml
@@ -54,7 +54,7 @@
                 tools:layout_editor_absoluteY="8dp">
 
                 <ImageView
-                    android:id="@+id/imageView5"
+                    android:id="@+id/paintedeggshell"
                     android:layout_width="match_parent"
                     android:layout_height="124dp"
                     app:srcCompat="@mipmap/ic_launcher" />
