--- a/app/src/main/res/layout/activity_emptyactivity.xml
+++ b/app/src/main/res/layout/activity_emptyactivity.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.liyuaninc.liyuantcapp.Main.Fragments.settingpic.emptyactivity">
+                                             xmlns:app="http://schemas.android.com/apk/res-auto"
+                                             xmlns:tools="http://schemas.android.com/tools"
+                                             android:layout_width="match_parent"
+                                             android:layout_height="match_parent"
+                                             tools:context=".activities.main.fragments.settingpic.EmptyActivity">
 
     <TextView
         android:id="@+id/textView9"
